# brain-public

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  WORK_LOG.md  pyproject.toml
.claude/: CODEBASE.md
.devcontainer/: Dockerfile  devcontainer.json
.obsidian/: graph.json
knowledge/index/: Home.md  Note Template.md
mcp/: README.md
scripts/: README.md  ingest.py  sync_template.sh
scripts/ingest_lib/: __init__.py  concepts.py  config.py  hashing.py  logging_setup.py  metadata.py  notes.py  pipeline.py  semantic.py  summarize.py
scripts/ingest_lib/extractors/: __init__.py  base.py  dataset.py  docx.py  notebook.py  pdf.py  pptx.py  text.py
